qiz264 - fix for slow scroll on ios devices, -causing another issue - open menu jump back to top

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -12,5 +12,6 @@
 
 .home-content {
   height: 100%;
-  overflow: auto;
+  /*overflow: auto;*/
+  /*-webkit-overflow-scrolling: touch;*/
 }
